--- a/src/app/features/cloud-atlas/cloud-atlas.component.html
+++ b/src/app/features/cloud-atlas/cloud-atlas.component.html
@@ -1,4 +1,5 @@
 <div class="atlas-wrapper">
-  <div class="cloud-1"></div>
-  <div class="cloud-2"></div>
+  <div *ngFor="let cloud of clouds; index as i" class="cloud" [style.backgroundColor]="cloud.color">
+    <!-- Contenido opcional aquí -->
+  </div>
 </div>
